--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pulsar-rs-producer"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,7 +12,7 @@ serde_yaml = "0.8.17"
 toml = "0.5.8"
 tokio = { version = "1.4", features = ["full"] }
 futures = "0.3"
-pulsar = { git = "https://github.com/omegaphoenix/pulsar-rs.git", branch = "hotfix/add-uncompressed-size", default-features = false, features = ["tokio-runtime", "compression"] }
+pulsar = { version = "~4.1.2", default-features = false, features = ["tokio-runtime", "compression", "auth-oauth2"] }
 log = "0.4.14"
 thiserror = "1.0.26"
 env_logger = "0.9.0"
